Fix sonar cries